--- a/calculator_esp-main/templates/end.html
+++ b/calculator_esp-main/templates/end.html
@@ -29,10 +29,14 @@
         <img class="rez__img" src="../../static/img/planet_medium.svg" alt="">
         <span>Su resultado {{result}} kWh</span>
         <span>La eficiencia energética de tu hogar es media</span>
+        <span>¿Quieres hacer del mundo un lugar más ecológico? ¡Rellena el formulario y haremos una eco-construcción para ti!</span>
+        <a href="{{ url_for('form') }}" class="main_link">Rellene el formulario</a>
         {%elif result >= 300%}
         <img class="rez__img" src="../../static/img/planet_bad.svg" alt="">
         <span>Su resultado {{result}} kWh</span>
         <span>¡La eficiencia energética de tu hogar está por debajo de la media!</span>
+        <span>¿Quieres hacer del mundo un lugar más ecológico? ¡Rellena el formulario y haremos una eco-construcción para ti!</span>
+        <a href="{{ url_for('form') }}" class="main_link">Rellene el formulario</a>
         {%endif%}
     </div>
     {% endblock %}
@@ -42,3 +46,4 @@
   </footer>
 </body>
 </html>
+
